# fastapi-blog

./: .gitignore  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
static/js/: auth.js
templates/: home.html  layout.html  post.html
